--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,3 +1,6 @@
+.app{
+    font-size: 10px;
+}
 .extract_t{
     display: flex;
     flex-direction: row;
@@ -30,6 +33,18 @@
     flex-wrap: wrap;
     border: 1px solid cadetblue;
 }
-.page_test>*{
+.page_test>*:nth-child(3){
     border: 1px solid salmon;
+}
+.page_test>*:nth-child(5){
+    border: 1px solid salmon;
+}
+.page_test>*:nth-child(7){
+    border: 1px solid salmon;
+}
+.page_test>*:nth-child(9){
+    border: 1px solid salmon;
+}
+.page_test{
+    grid-template-columns: 10% repeat(4,4.5% 18%);
 }
